@@ -1,0 +1,20 @@
+﻿using System;
+
+namespace sones.GraphQL.ErrorHandling
+{
+    /// <summary>
+    /// Contains static ErrorCodes
+    /// </summary>
+    public static class ErrorCodes
+    {
+        #region GraphQL (prefix: 5)
+
+        /// <summary>
+        /// 
+        /// </summary>
+        public static UInt16 GqlSyntax = 50001;
+
+        #endregion
+    
+    }
+}
